[package]
name = "gnparser"
version = "0.1.0"
exclude = ["tests/*", "testdata/*"]
authors = ["Dmitry Mozzherin <dmozzherin@gmail.com>"]
repository = "https://github/gnames/gnparser-rs"
documentation = "https://docs.rs/gnparser"
license = "MIT"
keywords = ["biodiversity", "biology", "informatics", "name", "parser", "peg"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]

[dependencies]
pest = "2"
pest_derive = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "0.8", features = ["v5"] }
lazy_static = "1.4"
csv = "1"

[dependencies.clap]
version = "2"
default_features = true
features = ["yaml"]
